src/objects/PMD_Product__c.object
<CustomObject>
    <fields>
        <fullName>Data_Network_Protocol__c</fullName>
        <label>Data Network Protocol</label>
        <picklist>
            <picklistValues>
                <fullName>CDMA 1X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA EV-DO Release 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA EV-DO Release A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA EV-DO Release B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA EV-DV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA WiMAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGE Class 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPRS Class 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPRS Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPRS Class 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPRS Class 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 1.2 Mbps (Category 1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 1.8 Mbps (Category 3/4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 2.8 Mbps (Category 15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 3.1Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 3.6 Mbps (Category 5/6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 7.2 Mbps (Category 7/8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 10.1 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 10.2 Mbps (Category 9/10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 14.4 Mbps (Category 10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 21.1 Mbps (Category 14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA 42.2 Mbps (Category 20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA DC 42.2 Mbps (Category 24)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUPA 1.8 Mbps</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Width__c</fullName>
        <inlineHelpText>For 64-bit processors run in 32-bit mode, select 32-bit</inlineHelpText>
        <label>Data Width</label>
        <picklist>
            <picklistValues>
                <fullName>32-bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth (Z) (mm)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Patent_Appoved_by_Legal__c</fullName>
        <label>Design Patent Approved by Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Applied For</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Personalization_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design &amp; Personalization Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Product_Lead_NAME__c</fullName>
        <description>Hidden field, not on layout;  this is used for back-end reporting via SSRS and NPI</description>
        <formula>Device_Product_Lead__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Product Lead NAME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Product_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Also known as Product Manager</inlineHelpText>
        <label>Device Product Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Motorola_Core_Directory__c.DirectoryStatus__c</field>
                <operation>notEqual</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>GPPD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <inlineHelpText>Describes the type of device. Fields visible on the screen are based on this selection.</inlineHelpText>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Backlighting__c</fullName>
        <label>Display_Backlighting</label>
        <picklist>
            <picklistValues>
                <fullName>Dynamic RGB LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Array LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Edge-LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Color_Depth__c</fullName>
        <label>Display Color Depth</label>
        <picklist>
            <picklistValues>
                <fullName>16M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>262k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>256k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Features__c</fullName>
        <label>Display Features</label>
        <picklist>
            <picklistValues>
                <fullName>Display Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Touch Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Interface__c</fullName>
        <label>Display Interface</label>
        <picklist>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Manufacturer__c</fullName>
        <inlineHelpText>Indicate the primary source manufacturer</inlineHelpText>
        <label>Display Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Auo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chi Mei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gemplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innolux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toppoly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wintek</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Orientation__c</fullName>
        <label>Display Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Resolution__c</fullName>
        <inlineHelpText>The display resolution refers to pixel density</inlineHelpText>
        <label>Display Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>128x128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128x160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130x130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1366x768</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1440x2560</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176x176</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176x220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>208x320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220x220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240x320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240x400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320x320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320x400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320x480</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360x325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360x330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360x840</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400x240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480 pixel diameter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480x272</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480x854</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>540x960</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>640x240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>98x64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHD 1080 (TBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full HD (1080x1920)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Size__c</fullName>
        <label>Display Size</label>
        <picklist>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <label>Display Type</label>
        <picklist>
            <picklistValues>
                <fullName>AMOLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD 720p</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid TFT LCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPS LTPS TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QHD LCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFT LCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WXGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WXUGA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docking_System_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliant to Docking System Reqmts-12M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Durability_Level__c</fullName>
        <label>Durability Level</label>
        <picklist>
            <picklistValues>
                <fullName>IP20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP67</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP68</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPx2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPx3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPx7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EDGE_Data_Protocols__c</fullName>
        <label>EDGE Data Protocols</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMail__c</fullName>
        <label>EMail Support</label>
        <picklist>
            <picklistValues>
                <fullName>Hangout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brew Email App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola-Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoSync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pocket Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP3/IMAP embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Loaded Java App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIM client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U-IMAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineering_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Engineering Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Motorola_Core_Directory__c.DirectoryStatus__c</field>
                <operation>notEqual</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>Products_GPPD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FM_Chipset__c</fullName>
        <label>FM Chipset</label>
        <picklist>
            <picklistValues>
                <fullName>AR1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW-NH387</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM 20780</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM4325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM4329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRF6350 (BT + FM + RDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcomm 2049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcomm 4325 Bt/LAN/FM combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcomm 4330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell 8787</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTK6616</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si4700 (FM only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si4701 (FM + RDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si4703 (FM + RDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STE-CW1100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI WL1271</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCN3620</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCN3660</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL1281</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL1283</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL1285</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FM_Radio__c</fullName>
        <label>FM Radio</label>
        <picklist>
            <picklistValues>
                <fullName>FM Radio Receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM Radio Transmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM Radio Transmit/Receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Services__c</fullName>
        <description>New field added on 23SEP13 to support PRD automation</description>
        <inlineHelpText>Field Service strategies, examples:
Swap Stock: Back up unit to swap with bad unit in case MASC is short of repair part material
Seed Stock: Extra inventory Carrier request Moto to ship to them for spare proposal</inlineHelpText>
        <label>Field Services</label>
        <picklist>
            <picklistValues>
                <fullName>14 Day Buyer&apos;s Remorse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Exchange (AE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Consumer service model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Center Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASC Motorola Authorized Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB policy (out of box)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swap Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAT (Turn Around Time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-in Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finish_Primary__c</fullName>
        <label>Finish (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Anodizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevlar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Etching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnesium Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCVM High Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCVM Low Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCVM Soft Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint on Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screen Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNCVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flash__c</fullName>
        <description>Old values removed on 23Sep13 by PRD automation: Dual LED
LED
LED/supercap
Strobe
XENON
N/A</description>
        <label>Camera Flash</label>
        <picklist>
            <picklistValues>
                <fullName>Front LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Dual-LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Dual-LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Dual-LED CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <label>Camera Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Macro Lens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Auto Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Options__c</fullName>
        <inlineHelpText>Select values in this field when a separate forecast is needed due to cost variance</inlineHelpText>
        <label>Forecast Options</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballistic Nylon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>